...
      ),
      floatingActionButton: SizedBox(
        width: 60,
        height: 60,
        child: FittedBox(
          child: FloatingActionButton(
            key: const Key('add-user-button'),
            heroTag: 'btn1',
            onPressed: () {
              showDialog(
                context: context,
                builder: (BuildContext context) => AddEmployeePopup(
                    context, ctx, widget.refreshController, false),
...
