...
            child: Form(
              key: _keyForm,
              child: Column(
                children: [
                  const SizedBox(height: 5.0),
                  TextFormField(
                    key: const Key('add-maintenance-name'),
                    style: const TextStyle(fontFamily: "mont", fontSize: 14),
                    decoration: const InputDecoration(
                      enabledBorder: OutlineInputBorder(
                        borderSide:
                            BorderSide(color: Color(0xFF6CCFF7), width: 2),
                      ),
...
                        maintenance.cost = double.parse(value);
                      }
                    },
                  ),
                  const SizedBox(height: 5.0),
                  DropdownButtonFormField<String>(
                    key: const Key('add-maintenance-type'),
                    value: maintenance.type,
                    onSaved: (value) {
                      maintenance.type = value!;
                    },
                    validator: (value) {
                      if (value == null || value == '') {
...
                      ),
                      border: OutlineInputBorder(),
                      labelText: 'Type*',
                      labelStyle: TextStyle(
                          color: Colors.grey, fontFamily: "mont", fontSize: 14),
                    ),
                    items: <String>['Maintenance', 'Test']
                        .map<DropdownMenuItem<String>>((String value) {
                      return DropdownMenuItem<String>(
                        value: value,
                        child: Text(value,
                            style: const TextStyle(
                                color: Colors.black, fontSize: 14)),
                      );
                    }).toList(),
                  ),
                  const SizedBox(height: 5.0),
                  DropdownButtonFormField<String>(
                    key: const Key('add-maintenance-status'),
                    value: maintenance.status,
                    onSaved: (value) {
                      maintenance.status = value!;
                    },
                    validator: (value) {
                      if (value == null || value == '') {
...
                      ),
                      border: OutlineInputBorder(),
                      labelText: 'Status*',
                      labelStyle: TextStyle(
                          color: Colors.grey, fontFamily: "mont", fontSize: 14),
                    ),
                    items: <String>['Complete', 'In progress', 'Out of service']
                        .map<DropdownMenuItem<String>>((String value) {
                      return DropdownMenuItem<String>(
                        value: value,
                        child: Text(value,
                            style: const TextStyle(
                                color: Colors.black, fontSize: 14)),
...
              color: Color(0xFF213e4b),
              fontSize: 15,
            ),
          ),
        ),
        TextButton(
          key: const Key('add-maintenance-confirm'),
          onPressed: () async {
            if (_keyForm.currentState!.validate()) {
              _keyForm.currentState!.save();
              Navigator.of(context).pop(true);
              await addMaintenance(maintenance);
            }
...
