...
        child: Form(
          key: _form,
          child: Container(
              margin: const EdgeInsets.symmetric(vertical: 5),
              child: widget.editingField != 'Status'
                  ? TextFormField(
                      key: const Key('edit-field-maintenance'),
                      style: const TextStyle(fontFamily: "mont", fontSize: 14),
                      decoration: InputDecoration(
                        enabledBorder: const OutlineInputBorder(
                          borderSide:
                              BorderSide(color: Color(0xFF6CCFF7), width: 2),
                        ),
...
              color: Color(0xFF213e4b),
              fontSize: 15,
            ),
          ),
        ),
        TextButton(
          key: const Key('edit-maintenance-name'),
          onPressed: () {
            saveField();
          },
          child: Container(
            color: const Color(0xFF6CCFF7),
            padding: const EdgeInsets.all(6),
...
