...
                                'Name',
                                infoDetail['name'],
                                loadData));
                      },
                      icon: const Icon(
                        Icons.mode_edit,
                        key: Key('edit-maintenance'),
                        color: Colors.black,
                      ),
                      iconSize: 30,
                    )
                  ]),
                  Padding(
...
