...
                  fit: BoxFit.contain,
                  width: 38,
                ),
                label: "Equipments",
                icon: Image.asset(
                  "images/equipment.png",
                  key: const Key('app-equipment-nav'),
                  fit: BoxFit.contain,
                  width: 38,
                ),
              ),
              BottomNavigationBarItem(
                activeIcon: Image.asset(
...
