...
                                          await deleteParameters(
                                              snapshot.data[index]['id'],
                                              'processor');
                                        }
                                      });
                                      break;
                                    case 'Memory':
                                      showDialog(
                                              context: context,
                                              builder: (_) =>
                                                  DeleteWarningParameters(
                                                      context, 'memory'))
                                          .then((value) async {
...
        toolbarHeight: 80,
        backgroundColor: const Color(0xFF6CCFF7),
        leading: const BackButtonWhite(),
        title: const SizedBox(
          width: double.infinity,
          child: AutoSizeText(
            'Equipments Parameters',
            maxLines: 2,
            textAlign: TextAlign.center,
            style: TextStyle(
              fontFamily: 'montBold',
              color: Colors.black,
              fontSize: 25,
...
              }
            },
            elevation: 10,
            child: const Icon(
              Icons.add,
              size: 35,
              key: Key('add-button'),
            ),
            backgroundColor: const Color(0xFF6CCFF7),
          ),
        ),
      ),
    );
...
